roles/ocp4_workload_ocp_troubleshooting_workshop/files/workloads/04-networking/4.4-network-policy/broken/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-4-4-frontend
  labels:
    app: lab-4-4-frontend
    demo.redhat.com/name: ocp-troubleshooting-workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lab-4-4-frontend
  template:
    metadata:
      labels:
        app: lab-4-4-frontend
        role: frontend
        lab: "4-4"
    spec:
      containers:
      - name: frontend
        image: registry.access.redhat.com/ubi9/nginx-124:latest
        ports:
        - containerPort: 8080
        command: ["/bin/sh", "-c"]
        args:
        - |
          [...]
