roles/ocp4_workload_ocp_troubleshooting_workshop/files/workloads/04-networking/4.4-network-policy/broken/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-4-4-frontend-svc
  labels:
    app: lab-4-4-frontend
    demo.redhat.com/name: ocp-troubleshooting-workshop
spec:
  selector:
    app: lab-4-4-frontend
  ports:
  - port: 8080
    targetPort: 8080
